Edit charset typo

--- a/loMio/IndexDavid.html
+++ b/loMio/IndexDavid.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <meta charset="utd-8">
+    <meta charset="utf-8">
     <title>David's Web page</title>
 </html>
