adds additional files

--- a/Isaac/indexIsaac.html
+++ b/Isaac/indexIsaac.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+<head>
     <title>Isaac´s web page</title>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
+    <body>
+        <h1 style = "text-align: center;">
+            Isaac Ponce
+        </h1>
+        <p
+            style = "text-align: center;" > This is a test page, the purpose of it is to follow up my developer skills <
+    </p>    
+        <img align src = "El_isaac.gif">
+    </body>
+</head>    
 </html>
