adds extra code

--- a/Isaac/indexIsaac.html
+++ b/Isaac/indexIsaac.html
@@ -8,9 +8,25 @@
             Isaac Ponce
         </h1>
         <p
-            style = "text-align: center;" > This is a test page, the purpose of it is to follow up my developer skills <
-    </p>    
-        <img align src = "El_isaac.gif">
+            style = "text-align: center;" > This is a test page, the purpose of it is to follow up my developer skills        </p>    
+        <img src = "El_isaac.gif" width = "104" height="100">
+        <br>
+        <a href = "www.facebook.com/melloxnear">This is a link </a>
+        <br>
+        <button>Click me</button>
+        <br>
+        <ul>
+            <li>Green</li>
+            <li>Red</li>
+            <li>Blue</li>
+        </ul>
+        <ol>
+            <li>Green</li>
+            <li>Red</li>
+            <li>Blue</li>
+        </ol>
+
+
     </body>
 </head>    
 </html>
