Adds files and subfolders

--- a/loMio/IndexDavid.html
+++ b/loMio/IndexDavid.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <meta charset="utf-8">
-    <title>David's Web page</title>
+    <head>
+        <meta charset="utf-8">
+        <title>David's Web page</title>
+    </head>
+    <body>
+        <header>
+            <h1>David's Web Page</h1>
+        </header>
+    <img src="images/Profile.jpg" alt="Profile picture">    
+    </body>
 </html>
