adds background color

--- a/Isaac/indexIsaac.html
+++ b/Isaac/indexIsaac.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
     <title>Isaac´s web page</title>
     <meta charset="UTF-8">
-    <body>
-        <h1 style = "text-align: center;">
+    <body style = "background-color:powderblue;">
+        <h1 style = "font-size: 60px;">
             Isaac Ponce
         </h1>
-        <p
-            style = "text-align: center;" > This is a test page, the purpose of it is to follow up my developer skills        </p>    
-        <img src = "El_isaac.gif" width = "104" height="100">
+        <p style = "text-align: center;"  >
+            This is a test page, the purpose of it is to follow up my developer skills
+        </p>
+        <hr>
+        <img src = "El_isaac.gif" width = "104" height="100" alt = "Pixelart Man">
         <br>
         <a href = "www.facebook.com/melloxnear">This is a link </a>
         <br>
