--- a/Index.html
+++ b/Index.html
@@ -2,4 +2,7 @@
 <html lang="en-US">
     <meta charset="utf-8">
     <title>Super Dev Brothers</title>
+    <head></head>
+    <body>
+        <p>Hello world</p>
 </html>
