--- a/loMio/IndexDavid.html
+++ b/loMio/IndexDavid.html
@@ -10,4 +10,12 @@
         </header>
     <img src="images/Profile.jpg" alt="Profile picture">    
     </body>
+    <main>
+        <article>
+            <h2>About me</h2>
+            <p>
+                Im a 25 year old human being currently working on 
+            </p>
+        </article>
+    </main>
 </html>
