--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <meta charset="utf-8">
-    <title>Super Dev Brothers</title>
-    <head></head>
+    <head>
+        <meta charset="utf-8">
+        <title>Super Dev Brothers</title>
+    </head>
     <body>
-        <p>Hello world</p>
+        <ul>
+            <li><a href="Isaac/indexIsaac.html">La pagina de Isaac</a></li>
+        </ul>
     </body>
 </html>
